fix: align signup/login text option

--- a/src/styles/Authentication.css
+++ b/src/styles/Authentication.css
@@ -39,11 +39,9 @@
     justify-content: center;
 }
 
-.LoginOption {
+.LoginOption, .SignupOption {
     display: flex;
     gap: 0.5rem;
-    margin-top: auto;
-    padding: 1rem;
 }
 
 .Background {
